--- a/new_pages/pivoting.Rmd
+++ b/new_pages/pivoting.Rmd
@@ -6,7 +6,7 @@
 
 ```{r, warning=F, message=F, out.height = c('50%'), fig.align="center", fig.show='hold', echo=F}
 knitr::include_graphics(here::here("images", "pivoting", "Pivoting_500x500.png"))
-
+test
 #knitr::include_graphics(here::here("images", "pivoting", "pivot_longer_new.png"))
 #knitr::include_graphics(here::here("images", "pivoting", "pivot_bar.png"))
 #knitr::include_graphics(here::here("images", "pivoting", "pivot_wider_new.png"))
